# prepjson

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: python-test.yml
benchmark/: data.py  run.py
src/: __init__.py  api.py  constants.py  load.py  parse.py
tests/: conftest.py  data.py  test_api_json_get.py  test_load.py  test_parse.py  utils.py
