[project]
name = "prepjson"
version = "0.1.0"
authors = [
    {name = "Mathew Huerta-Enochian", email = "mathewhe@gmail.com"},
]
maintainers = [
    {name = "Mathew Huerta-Enochian", email = "mathewhe@gmail.com"},
]
description = "PrepJSON: Preparsing large JSON files for faster loading."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: File Formats :: JSON",
]
keywords = ["json"]
dependencies = [
    "simple-file-checksum"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "bumpver",
]

[project.scripts]
ppjson = "prepjson.api:cli_parse"

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"prepjson" = "src"}

[bumpver]
curent_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"

[bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"$',
]
"src/__init__.py" = [
    '^__version__ = "{version}"$',
]
